Agentforce/force-app/main/default/objects/Capacity_Plan__c/Capacity_Plan__c.object-meta.xml
<CustomObject>
    <label>Capacity Plan</label>
    <nameField>
        <label>Capacity Plan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Capacity Plans</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>