Agentforce/force-app/main/default/objects/Capacity_Plan__c/fields/Actual_Days__c.field-meta.xml
<CustomField>
    <fullName>Actual_Days__c</fullName>
    <description>Actual duration in Days</description>
    <label>Actual Days</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>