Agentforce/force-app/main/default/objects/Capacity_Plan__c/fields/Bid_Manager__c.field-meta.xml
<CustomField>
    <fullName>Bid_Manager__c</fullName>
    <formula>Opportunity__r.Bid_Manager__r.Full_Name__c</formula>
    <label>Bid Manager</label>
    <type>Text</type>
</CustomField>