Agentforce/force-app/main/default/objects/Capacity_Plan__c/fields/Bid_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Bid_Start_Date__c</fullName>
    <formula>Opportunity__r.Bid_Start_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bid Start Date</label>
    <type>Date</type>
</CustomField>