Agentforce/force-app/main/default/objects/Capacity_Plan__c/fields/Bid_Team__c.field-meta.xml
<CustomField>
    <fullName>Bid_Team__c</fullName>
    <description>Determines which Bid Team are assigned to the Capacity Plan</description>
    <label>Bid Team</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Private</fullName>
            </value>
            <value>
                <fullName>Public</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>