Agentforce/force-app/main/default/objects/Capacity_Plan__c/fields/Capacity_Plan_No__c.field-meta.xml
<CustomField>
    <fullName>Capacity_Plan_No__c</fullName>
    <displayFormat>CP-{00000}</displayFormat>
    <externalId>true</externalId>
    <label>Capacity Plan No</label>
    <type>AutoNumber</type>
</CustomField>