Agentforce/force-app/main/default/objects/Capacity_Plan__c/fields/CapacityCaseSafeID__c.field-meta.xml
<CustomField>
    <fullName>CapacityCaseSafeID__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <label>CapacityCaseSafeID</label>
    <type>Text</type>
</CustomField>