Agentforce/force-app/main/default/objects/Capacity_Plan__c/fields/Commercial_Pricing__c.field-meta.xml
<CustomField>
    <fullName>Commercial_Pricing__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Commercial Pricing</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.Profile.Name</field>
            <operation>equals</operation>
            <value>Estimator</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Capacity_Plans_Commercial</relationshipName>
    <type>Lookup</type>
</CustomField>