Agentforce/force-app/main/default/objects/Capacity_Plan__c/fields/Days_Available__c.field-meta.xml
<CustomField>
    <fullName>Days_Available__c</fullName>
    <formula>CASE(MOD( Issue_Date__c - DATE(1900, 1, 7), 7),
  0, (FLOOR((Submission_Date__c - Issue_Date__c)/7)*5),
  1, (FLOOR((Submission_Date__c - Issue_Date__c)/7)*5) + MIN(5, MAX(0, MOD(Submission_Date__c - DATE(1900, 1, 7), 7)-1)),
  2, (FLOOR((Submission_Date__c - Issue_Date__c)/7)*5) + MIN(5, MAX(0, MOD(Submission_Date__c - DATE(1900, 1, 7), 7)-2)),
  3, (FLOOR((Submission_Date__c - Issue_Date__c)/7)*5) + MIN(5, MAX(0, MOD(Submission_Date__c - DATE(1900, 1, 7), 7)-3)),
  4, (FLOOR((Submission_Date__c - Issue_Date__c)/7)*5) + MIN(5, MAX(0, MOD(Submission_Date__c - DATE(1900, 1, 7), 7)-4)),
  5, (FLOOR((Submission_Date__c - Issue_Date__c)/7)*5) + MIN(5, MAX(0, MOD(Submission_Date__c - DATE(1900, 1, 7), 7)-5)),
  (FLOOR((Submission_Date__c - Issue_Date__c)/7)*5) + MIN(5, MAX(0, MOD(Submission_Date__c - DATE(1900, 1, 7), 7)-6))
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Available</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>