Agentforce/force-app/main/default/objects/Capacity_Plan__c/fields/Design_Support_String__c.field-meta.xml
<CustomField>
    <fullName>Design_Support_String__c</fullName>
    <label>Design Support</label>
    <length>255</length>
    <type>Text</type>
</CustomField>