Agentforce/force-app/main/default/objects/Capacity_Plan__c/fields/Document_Type__c.field-meta.xml
<CustomField>
    <fullName>Document_Type__c</fullName>
    <description>Determines the Type of Document which the Capacity Plan relates</description>
    <label>Document Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>01 - EOI</fullName>
            </value>
            <value>
                <fullName>02 - SQ/RFI</fullName>
            </value>
            <value>
                <fullName>03 - ITT/RFP</fullName>
            </value>
            <value>
                <fullName>04 - Presentation</fullName>
            </value>
            <value>
                <fullName>05 - Negotiation/BAFO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>