Agentforce/force-app/main/default/objects/Capacity_Plan__c/fields/Estimated_Days__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Days__c</fullName>
    <description>Estimated duration in Days expected</description>
    <label>Estimated Days</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>