Agentforce/force-app/main/default/objects/Capacity_Plan__c/fields/Is_Bid_Manager__c.field-meta.xml
<CustomField>
    <fullName>Is_Bid_Manager__c</fullName>
    <formula>$User.Id =  Opportunity__r.Bid_Manager__c</formula>
    <label>Is Bid Manager</label>
    <type>Checkbox</type>
</CustomField>