Agentforce/force-app/main/default/objects/Capacity_Plan__c/fields/Is_Bid_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Is_Bid_Start_Date__c</fullName>
    <description>Ticked if Today is the Bid Start Date. Used as Criteria for setting Status in the Scheduled Flow.</description>
    <formula>Bid_Start_Date__c = TODAY()</formula>
    <label>Is Bid Start Date</label>
    <type>Checkbox</type>
</CustomField>