Agentforce/force-app/main/default/objects/Capacity_Plan__c/fields/Is_Head_of_Bid__c.field-meta.xml
<CustomField>
    <fullName>Is_Head_of_Bid__c</fullName>
    <formula>$User.Id =  Opportunity__r.Head_of_Bid__c</formula>
    <label>Is Head of Bid</label>
    <type>Checkbox</type>
</CustomField>