Agentforce/force-app/main/default/objects/Capacity_Plan__c/fields/Issue_Date__c.field-meta.xml
<CustomField>
    <fullName>Issue_Date__c</fullName>
    <description>Document Issue Date</description>
    <label>Issue Date</label>
    <type>Date</type>
</CustomField>