Agentforce/force-app/main/default/objects/Capacity_Plan__c/fields/Lead_Bid_Manager__c.field-meta.xml
<CustomField>
    <fullName>Lead_Bid_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead Bid Manager</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Please select a Bid Manager</errorMessage>
        <filterItems>
            <field>User.Profile.Name</field>
            <operation>equals</operation>
            <value>Bid Manager</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Capacity_Plans_Lead</relationshipName>
    <type>Lookup</type>
</CustomField>