Agentforce/force-app/main/default/objects/Capacity_Plan__c/fields/Legal_Support_String__c.field-meta.xml
<CustomField>
    <fullName>Legal_Support_String__c</fullName>
    <label>Legal Support</label>
    <length>255</length>
    <type>Text</type>
</CustomField>