Agentforce/force-app/main/default/objects/Capacity_Plan__c/fields/Operational_Lead__c.field-meta.xml
<CustomField>
    <fullName>Operational_Lead__c</fullName>
    <label>Operational Lead</label>
    <type>TextArea</type>
</CustomField>