Agentforce/force-app/main/default/objects/Capacity_Plan__c/fields/Operational_Lead_Email__c.field-meta.xml
<CustomField>
    <fullName>Operational_Lead_Email__c</fullName>
    <label>Operational Lead Email</label>
    <type>Email</type>
</CustomField>