Agentforce/force-app/main/default/objects/Capacity_Plan__c/fields/Operational_Lead_String__c.field-meta.xml
<CustomField>
    <fullName>Operational_Lead_String__c</fullName>
    <label>Operational Lead</label>
    <length>255</length>
    <type>Text</type>
</CustomField>