Agentforce/force-app/main/default/objects/Capacity_Plan__c/fields/OppCaseSafeID__c.field-meta.xml
<CustomField>
    <fullName>OppCaseSafeID__c</fullName>
    <formula>Opportunity__r.OpportunityCaseSafeID__c</formula>
    <label>OppCaseSafeID</label>
    <type>Text</type>
</CustomField>