Agentforce/force-app/main/default/objects/Capacity_Plan__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>Cascade</deleteConstraint>
    <description>Opportunity lookup which the Capacity Plan relates</description>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Capacity Plans</relationshipLabel>
    <relationshipName>Capacity_Plans</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>