Agentforce/force-app/main/default/objects/Capacity_Plan__c/fields/Planning_Status__c.field-meta.xml
<CustomField>
    <fullName>Planning_Status__c</fullName>
    <label>Planning Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Future</fullName>
                <color>#E27001</color>
                <default>true</default>
                <label>Future</label>
            </value>
            <value>
                <fullName>Imminent</fullName>
                <color>#FF0000</color>
                <label>Imminent</label>
            </value>
            <value>
                <fullName>Active</fullName>
                <color>#0B6FCE</color>
                <label>Active</label>
            </value>
            <value>
                <fullName>Complete</fullName>
                <color>#66FF99</color>
                <label>Complete</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>