Agentforce/force-app/main/default/objects/Capacity_Plan__c/fields/Pricing_Support_String__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Support_String__c</fullName>
    <label>Pricing Support</label>
    <length>255</length>
    <type>Text</type>
</CustomField>