Agentforce/force-app/main/default/objects/Capacity_Plan__c/fields/RFI_Issue_Date__c.field-meta.xml
<CustomField>
    <fullName>RFI_Issue_Date__c</fullName>
    <formula>Opportunity__r.RFI_Issue_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RFI Issue Date</label>
    <type>Date</type>
</CustomField>