Agentforce/force-app/main/default/objects/Capacity_Plan__c/fields/RFI_Submission_Date__c.field-meta.xml
<CustomField>
    <fullName>RFI_Submission_Date__c</fullName>
    <formula>Opportunity__r.RFI_Submission_Date__c</formula>
    <label>RFI Submission Date</label>
    <type>Date</type>
</CustomField>