Agentforce/force-app/main/default/objects/Capacity_Plan__c/fields/RFP_Issue_Date__c.field-meta.xml
<CustomField>
    <fullName>RFP_Issue_Date__c</fullName>
    <formula>Opportunity__r.RFP_Issue_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RFP Issue Date</label>
    <type>Date</type>
</CustomField>