Agentforce/force-app/main/default/objects/Capacity_Plan__c/fields/Submission_Date__c.field-meta.xml
<CustomField>
    <fullName>Submission_Date__c</fullName>
    <description>Document Submission Date</description>
    <label>Submission Date</label>
    <type>Date</type>
</CustomField>