Agentforce/force-app/main/default/objects/Capacity_Plan__c/fields/Time_Utilisation__c.field-meta.xml
<CustomField>
    <fullName>Time_Utilisation__c</fullName>
    <formula>(Actual_Days__c / Estimated_Days__c)</formula>
    <label>Time Utilisation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>